# flext-infra

./: .envrc  .gitignore  .mise.toml  .python-version  AGENTS.md  Makefile  README.md  base.mk  conftest.py  custom.mk  history  history.json  mkdocs.yml  nohup.out  pyproject.toml  replace_list.yml  test_output.txt  workspace_custom.mk
.github/workflows/: ci.yml
config/: codegen.yaml  infra.yaml  tooling.yaml
config/rules/: protocol_gen.yaml
config/schemas/: protocol_gen.schema.json
docs/: index.md
docs/api-reference/: README.md
docs/superpowers/plans/: 2026-07-16-codegen-protocol-generation.md
guides/: README.md
src/flext_infra/: __init__.py  __init__.pyi  __main__.py  __unit__.py  __version__.py  _base_payload.py  _base_projects.py  _base_selection.py  _cli_flags.py  _cli_routes_codegen.py  _cli_routes_validate.py  _cli_routes_workspace.py  _config.py  _exports.py  _exports_lazy_part_01.py  _exports_lazy_part_02.py  _iteration_canonical.py  _iteration_directory.py  _iteration_matching.py  _iteration_modules.py  _iteration_project.py  _iteration_workspace.py  _settings.py  api.py  base.py  base_selection.py  cli.py  cli_registry.py  constants.py  iteration.py  models.py  protocols.py  settings.py  typings.py  utilities.py
src/flext_infra/_constants/: __init__.py  __unit__.py  _exports.py  _exports_lazy_part_01.py  _exports_lazy_part_02.py  adapters.py  base.py  basemk.py  census.py  check.py  cli.py  cli_routes.py  cli_routes_codegen.py  cli_routes_validate.py  cli_routes_validate_commands.py  cli_routes_workspace.py  codegen.py  codegen_detection.py  codegen_lazy.py  codegen_project.py  codegen_render_names.py  cst.py  deps.py  detectors.py  docs.py  github.py  make.py  namespace.py  refactor.py  release.py  rope.py  source_code.py  validate.py  workspace.py
src/flext_infra/_detectors/: __init__.py  future_annotations_detector.py  import_alias_detector.py  runtime_alias_detector.py
src/flext_infra/_enforcement/: __init__.py  __unit__.py  collection_base.py  collection_sources.py  collection_tests.py  engine.py  metadata.py  selection.py
src/flext_infra/_fixtures/: __init__.py  __unit__.py  enforcement.py
src/flext_infra/_models/: __init__.py  __unit__.py  base.py  basemk.py  census.py  check.py  cli_inputs.py  cli_inputs_codegen.py  cli_inputs_ops.py  codegen.py  codegen_conform.py  codegen_deduplication.py  codegen_grpc.py  codegen_render.py  config.py  cst.py  deps.py  deps_toml.py  deps_tool_config.py  deps_tool_config_linters.py  deps_tool_config_type_checkers.py  docs.py  enforcement.py  engine.py  engine_ops.py  gates.py  github.py  guard.py  mixins.py  mro_scan.py  refactor.py  refactor_ast_grep.py  refactor_census.py  refactor_namespace_enforcer.py  refactor_violations.py  release.py  rope.py  scan.py  scope.py  settings.py  (+4 more)
src/flext_infra/_protocols/: __init__.py  __unit__.py  base.py  basemk.py  check.py  cst.py  deps.py  docs.py  refactor.py  release.py  rope.py  rope_runtime.py  validate.py  worktree.py
src/flext_infra/_typings/: __init__.py  __unit__.py  adapters.py  base.py  cst.py  rope.py
src/flext_infra/_utilities/: __init__.py  __init__.pyi  __unit__.py  _docs_audit_detectors.py  _docs_scope_build.py  _docs_scope_selection.py  _exports.py  _exports_lazy_part_01.py  _exports_lazy_part_02.py  _exports_lazy_part_03.py  _git_worktree.py  _github_pr_single.py  _github_sync.py  _models.py  _project_discovery_candidates.py  _project_discovery_shape.py  _rope_bracket_balance.py  _rope_core_pymodule.py  _rope_core_resources.py  _rope_method_order.py  _utilities.py  base.py  cli.py  (+136 more)
tests/: __init__.py  __init__.pyi  __unit__.py  _exports.py  _exports_lazy_part_01.py  _exports_lazy_part_02.py  _exports_lazy_part_03.py  _exports_lazy_part_04.py  _exports_lazy_part_05.py  _exports_lazy_part_06.py  _exports_lazy_part_07.py  _exports_lazy_part_08.py  base.py  conftest.py  constants.py  fixtures.py  fixtures_git.py  git_service.py  helpers.py  models.py  protocols.py  runner_service.py  scenarios.py  settings.py  test_infra_refactor_rope_migrations.py  typings.py  utilities.py  workspace_factory.py  workspace_scenarios.py
tests/_constants/: __init__.py  __unit__.py  _exports.py  _exports_lazy_part_01.py  _exports_lazy_part_02.py  _exports_lazy_part_03.py  _exports_lazy_part_04.py  _exports_lazy_part_05.py  _exports_lazy_part_06.py  _exports_lazy_part_07.py  _exports_lazy_part_08.py  _exports_lazy_part_09.py  domain.py  fixtures.py
tests/infra/: __init__.py  constants.py  fixtures.py  git_service.py  helpers.py  models.py  protocols.py  runner_service.py  typings.py  utilities.py  workspace_factory.py  workspace_scenarios.py
tests/integration/: __init__.py  __unit__.py  docs_serve_e2e_tests.py  test_infra_integration.py  test_refactor_nesting_file.py  test_refactor_nesting_idempotency.py  test_refactor_nesting_performance.py  test_refactor_nesting_project.py  test_refactor_nesting_workspace.py  test_refactor_policy_mro.py
tests/refactor/: __init__.py  __unit__.py  test_rope_project.py  test_rope_semantic.py  test_rope_stubs.py
tests/unit/: __init__.py  __init__.pyi  __unit__.py  _exports.py  _exports_lazy_part_01.py  _exports_lazy_part_02.py  _exports_lazy_part_03.py  _exports_lazy_part_04.py  _exports_lazy_part_05.py  _exports_lazy_part_06.py  _exports_lazy_part_07.py  _exports_lazy_part_08.py  cli_what_selector_tests.py  conftest.py  fixtures.py  fixtures_git.py  runner_service.py  scenarios.py  test_enforcement_plugin.py  test_infra_constants_core.py  test_infra_constants_extra.py  test_infra_git.py  test_infra_init_lazy_core.py  test_infra_init_lazy_submodules.py  test_infra_main.py  test_infra_maintenance_cli.py  test_infra_maintenance_init.py  test_infra_maintenance_main.py  test_infra_maintenance_python_version.py  test_infra_paths.py  test_infra_patterns_core.py  test_infra_patterns_extra.py  test_infra_protocols.py  test_infra_public_api.py  test_infra_refactor_rope_migrations.py  test_infra_reporting_core.py  test_infra_reporting_extra.py  test_infra_root_export_contract.py  test_infra_rope_imports.py  test_infra_rope_service.py  (+32 more)
(+1392 files in other folders)
